<resources>
    <string name="app_name">Hair Booking</string>
    // OAuth 2.0 client ID
    <string name="web_api_key">868463371432-gpt3cl85sedjn393hcmb0j8r56bmsps1.apps.googleusercontent.com</string>
    //facebook
    <string name="facebook_app_id">1038246873768575</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">a41bc40559e870f7491fa32fd973141f</string>


    // Booking screen
    <string name="booking_screen_title">Đặt lịch cắt tóc</string>

    <string name="right_arrow">&#9654;</string>
    <string name="choose_salon_label">Chọn salon</string>
    <string name="choose_salon_edit_text_hint">Xem tất cả salon</string>
    <string name="choose_service_label">Chọn dịch vụ</string>
    <string name="choose_service_edit_text_hint">Xem tất cả dịch vụ hiện có</string>
    <string name="choose_stylist_label">Chọn stylist (không bắt buộc)</string>
    <string name="choose_stylist_edit_text_hint">Xem các stylist hiện có</string>

    <string name="choose_date_label">Chọn ngày cắt tóc</string>
    <string name="choose_date_edit_text_hint">Chọn ngày cắt tóc</string>
    <string name="choose_time_label">Chọn giờ cắt tóc</string>
    <string name="confirm_booking_btn">Hoàn tất</string>
    <string name="note_label">Ghi chú cho salon</string>
    <string name="note_edit_text_hint">VD: Ngoáy tai kỹ, gội nước mát,...</string>

    <string name="discount_label">Chọn khuyến mãi (nếu có)</string>
    <string name="discount_edit_text_hint">Xem các khuyến mãi hiện có</string>

    // Choose stylist screen
    <string name="choose_stylist_screen_title">Chọn stylist</string>


    // Choose salon screen
    <string name="choose_salon_screen_title">Chọn salon</string>

    // Choose service screen
    <string name="choose_service_screen_title">Chọn dịch vụ</string>
    <string name="price_unit">VND</string>

    // Choose discount screen
    <string name="choose_discount_screen_title">Chọn khuyến mãi</string>

    // Warning title
    <string name="warning_title">Cảnh báo</string>

    // Booking confirm screen
    <string name="booking_confirm_screen_thanks_label">CẢM ƠN BẠN ĐÃ ĐẶT LỊCH CẮT TÓC</string>
    <string name="booking_confirm_screen_appointment_label">THÔNG TIN ĐẶT LỊCH</string>
    <string name="booking_confirm_screen_salon_label">THÔNG TIN SALON</string>
    <string name="booking_confirm_screen_price_label">TỔNG GIÁ</string>
    <string name="booking_confirm_screen_unit_label">VND</string>
    <string name="booking_confirm_screen_note_for_user">Nếu bạn muốn điều chỉnh thông tin lịch đặt, vui lòng gọi vào số điện thoại của Salon ở trên</string>
    <string name="booking_confirm_screen_button">TRỞ VỀ MÀN HÌNH CHÍNH</string>

    // Manager appointment list screen
    <string name="search_bar_hint">Nhập mã lịch đặt...</string>

    <string name="customer_name_label">Khách hàng</string>
    <string name="service_title_label">Dịch vụ</string>
    <string name="stylist_name_label">Thợ làm tóc</string>
    <string name="colon">:</string>
    <!--    Navigation Drawer -->
    <string name="nav_home">Trang chủ</string>
    <string name="nav_wish_list">Yêu thích</string>
    <string name="nav_membership">Thành viên</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_my_profile">Thông tin cá nhân</string>
    <string name="nav_change_password">Đổi mật khẩu</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="history_menu_item">Lịch đã đặt</string>
    <string name="schedule_nav_user">Đặt lịch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_one_somewhere_com">some.one@somewhere.com</string>
    <string name="sign_up">Đăng ký</string>
    <string name="login">Đăng Nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="full_name">Họ và tên</string>
    <string name="gender">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="mock_booking_time">19:30 - 23/04/2022</string>
    <string name="bookingTimeLabel">Thời gian diễn ra</string>
    <string name="addressSalonLabel">Địa chỉ chi nhánh</string>
    <string name="mock_address_data">342/11 Khuông việt, phường Phú Trung, Quận Tân Phú, Tp Hồ Chí Minh</string>
    <string name="nameSalonLabel">Tên chi nhánh</string>
    <string name="mock_data_address">Chi Nhánh quận Tân Phú</string>
    <string name="totalPriceLabel">Tổng giá</string>
    <string name="mockDataPrice">322.122 USD</string>
    <string name="cancelBookingLabel">Hủy Lịch</string>
    <string name="mock_data_status_appointment">Chưa diễn ra</string>
    <string name="status_appointment_history_label">Trạng thái</string>
    <string name="appointmentDetailLabel">CHI TIẾT LỊCH ĐẶT</string>
    <string name="price_services">GIÁ DỊCH VỤ</string>
    <string name="qr_instruction">Quét mã khi để thanh toán sau khi hớt tóc xong.</string>
    <string name="stylist">Thợ làm tóc</string>
    <string name="nav_appointment_manager">Lịch được đặt</string>
    <string name="stylist_name">Tên nhân viên</string>
    <string name="stylist_id">Mã nhân viên</string>
    <string name="description">Mô tả</string>
    <string name="current_working_place">Nơi làm việc hiện tại</string>
    <string name="save_btn">Lưu thông tin</string>
    <string name="delete_btn">Xóa nhân viên</string>
    <string name="add_stylist_btn">Thêm mới nhân viên</string>
    <string name="search">Tìm kiếm ...</string>
    <string name="ratingLabel">ĐÁNH GIÁ TRẢI NGHIỆM</string>
    <string name="send_your_rating_pls">Gửi đánh giá của bạn đến chúng tôi</string>
    <string name="send">Gửi</string>
    <string name="nav_branch">Chi nhánh</string>
    <string name="nav_service">Dịch vụ</string>
    <string name="nav_discount">Khuyến mãi</string>


</resources>