<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/schedule_nav_user" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history_menu_item"
            android:icon="@drawable/ic_history"/>

    </group>
    <group android:id="@+id/group_2"
        android:checkableBehavior="single">
        <item android:id="@+id/nav_wish_list"
            android:title="@string/nav_wish_list"
            android:icon="@drawable/ic_favorite"/>

        <item android:id="@+id/nav_membership"
            android:title="@string/nav_membership"
            android:icon="@drawable/ic_membership"/>
    </group>
    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_my_profile"/>
            <item android:id="@+id/nav_change_password"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_change_password"/>
        </menu>
    </item>
</menu>