<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.hair_booking.ui.authentication.SignUpViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".ui.authentication.SignUpActivity">

            <ImageView
                android:id="@+id/signupPrev"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/signup_img" />

            <TextView
                android:id="@+id/signUpTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usrSignUpLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/emailSignUpET"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailSignUpET"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:shadowColor="@color/shadow_edit_text"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:addTextChangedListener = "@{viewModel.emailTextWatcher}"/>

            <TextView
                android:id="@+id/emailWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:textColor="#FF5252"
                android:text="@{viewModel.emailWarning}"
                android:visibility="@{viewModel.isVisibleEmailWarning?View.VISIBLE:View.GONE}"/>

            <TextView
                android:id="@+id/fullNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/nameSignUpET"
                android:text="@string/full_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameSignUpET"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:shadowColor="@color/shadow_edit_text"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:addTextChangedListener = "@{viewModel.fullNameTextWatcher}"/>

            <TextView
                android:id="@+id/fullNameWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:textColor="#FF5252"
                android:text="@{viewModel.fullNameWarning}"
                android:visibility="@{viewModel.isVisibleFullNameWarning?View.VISIBLE:View.GONE}"/>

            <TextView
                android:id="@+id/genderLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/gender"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id = "@+id/genderGroupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:text="@string/female" />
            </RadioGroup>

            <TextView
                android:id="@+id/phoneNumberTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/phoneNumberET"
                android:text="@string/phone_number"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:inputType="phone"
                android:padding="10dp"
                android:shadowColor="@color/shadow_edit_text"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="2"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/pwdLabelSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/passwordSignUpET"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordSignUpET"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"
                android:shadowColor="@color/shadow_edit_text"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:addTextChangedListener = "@{viewModel.passwordTextWatcher}"/>

            <TextView
                android:id="@+id/passwordWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:textColor="#FF5252"
                android:text="@{viewModel.passwordWarning}"
                android:visibility="@{viewModel.isVisiblePasswordWarning?View.VISIBLE:View.GONE}"/>

            <TextView
                android:id="@+id/confirmPwdSignUpET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-light"
                android:labelFor="@id/confirmPasswordET"
                android:text="@string/confirm_password"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginStart="44dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="10"
                android:inputType="textPassword"
                android:padding="10dp"
                android:shadowColor="@color/shadow_edit_text"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:addTextChangedListener = "@{viewModel.confirmPasswordTextWatcher}"/>

            <TextView
                android:id="@+id/confirmWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="8dp"
                android:textColor="#FF5252"
                android:text="@{viewModel.passwordConfirmationWarning}"
                android:visibility="@{viewModel.isVisibleConfirmPasswordWarning?View.VISIBLE:View.GONE}"/>

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="253dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button"
                android:enabled="@{!viewModel.isVisibleEmailWarning &amp;&amp; !viewModel.isVisibleFullNameWarning &amp;&amp; !viewModel.isVisiblePasswordWarning &amp;&amp; !viewModel.isVisibleConfirmPasswordWarning }"
                android:text="@string/sign_up"
                app:backgroundTint="@color/theme_primary" />
        </LinearLayout>
    </ScrollView>
</layout>
